--- a/project/server/src/Api/appsettings.Development.json
+++ b/project/server/src/Api/appsettings.Development.json
@@ -13,7 +13,8 @@
   },
   "AllowedOrigins": "http://localhost:3000",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Username=evangelos.chavlis;Password=Ar@g0rn1996;Database=weather_db;"
+    "DefaultConnection": "Host=localhost;Port=5432;Username=evangelos.chavlis;Password=Ar@g0rn1996;Database=weather_db;",
+    "ArchiveConnection": "Host=localhost;Port=5432;Username=evangelos.chavlis;Password=Ar@g0rn1996;Database=archive_db;"
   },
   "IpRateLimiting": {
     "EnableEndpointRateLimiting": true,
