wip server trasformation

--- a/project/.vscode/settings.json
+++ b/project/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "cSpell.words": [
         "operatoration"
-    ]
+    ],
+    "editor.fontFamily": "Fira Code",
+    "editor.fontLigatures": true,
 }
