--- a/project/server/src/Api/appsettings.Development.json
+++ b/project/server/src/Api/appsettings.Development.json
@@ -19,7 +19,7 @@
   },
   "AllowedOrigins": "http://localhost:3000",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Username=evangelos.chavlis;Password=Ar@g0rn1996;Database=weather_db;",
+    "DataConnection": "Host=localhost;Port=5432;Username=evangelos.chavlis;Password=Ar@g0rn1996;Database=weather_db;",
     "ArchiveConnection": "Host=localhost;Port=5432;Username=evangelos.chavlis;Password=Ar@g0rn1996;Database=archive_db;"
   },
   "IpRateLimiting": {
