--- a/project/server/src/Infrastructure/ML/appsettings.json
+++ b/project/server/src/Infrastructure/ML/appsettings.json
@@ -13,6 +13,6 @@
   },
   "AllowedOrigins": "http://localhost:3000",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Username=evangelos.chavlis;Password=Ar@g0rn1996;Database=weather_db;"
+    "DataConnection": "Host=localhost;Port=5432;Username=evangelos.chavlis;Password=Ar@g0rn1996;Database=weather_db;"
   }
 }
